--- a/alpha_earth_app.ipynb
+++ b/alpha_earth_app.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {
     "tags": []
    },
@@ -293,6 +293,7 @@
     "                <li style='margin-bottom: 6px;'><strong>Select Algorithm Settings</strong> (type, % of test data, number of samples per class, spatial scale and seed)</li>\n",
     "                <li style='margin-bottom: 6px;'><strong>Hit the RUN ANALYSIS button</strong></li>\n",
     "                <li style='margin-bottom: 6px;'><strong>Check results</strong></li>\n",
+    "                <li style='margin-bottom: 6px;'><strong>Optional: download embedding rasters</strong></li>\n",
     "            </ol>\n",
     "        </div>\n",
     "    </div>\n",
@@ -300,14 +301,28 @@
     ")\n",
     "\n",
     "        # Attribution box\n",
+    "        # Attribution box\n",
+    "        # Attribution box\n",
     "        self.attribution_box = widgets.HTML(\n",
     "            value=\"\"\"\n",
-    "            <div style='background: #f1f5f9; padding: 15px; border-radius: 8px; margin-bottom: 20px;\n",
+    "            <div style='background: #f1f5f9; padding: 20px; border-radius: 8px; margin-bottom: 20px;\n",
     "                        text-align: center; border-left: 4px solid #64748b;'>\n",
-    "                <p style='margin: 0; font-size: 14px; color: #475569;'>\n",
-    "                    This App was created by Felipe Benavides from the SDS Lab at Northeastern University \n",
-    "                    and the Gulf of Maine Research Institute.<br>\n",
-    "                    📧 <a href=\"mailto:pipeben@gmail.com\" style=\"color: #0ea5e9; text-decoration: none;\">pipeben@gmail.com</a>\n",
+    "                <div style='display: flex; justify-content: center; align-items: center; gap: 20px; margin-bottom: 15px;'>\n",
+    "                    <a href=\"https://sdslab.io/\" target=\"_blank\" style=\"text-decoration: none;\">\n",
+    "                        <img src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/b/bb/NU_RGB_seal_R.png/250px-NU_RGB_seal_R.png\" \n",
+    "                             alt=\"Northeastern University\" style=\"height: 60px; width: auto; cursor: pointer; transition: opacity 0.3s; border-radius: 4px;\"\n",
+    "                             onmouseover=\"this.style.opacity='0.8'\" onmouseout=\"this.style.opacity='1'\">\n",
+    "                    </a>\n",
+    "                    <a href=\"https://www.gmri.org/\" target=\"_blank\" style=\"text-decoration: none;\">\n",
+    "                        <img src=\"https://upload.wikimedia.org/wikipedia/en/9/90/Gulf_of_Maine_Research_Institute_logo.png\" \n",
+    "                             alt=\"Gulf of Maine Research Institute\" style=\"height: 60px; width: auto; cursor: pointer; transition: opacity 0.3s; border-radius: 4px;\"\n",
+    "                             onmouseover=\"this.style.opacity='0.8'\" onmouseout=\"this.style.opacity='1'\">\n",
+    "                    </a>\n",
+    "                </div>\n",
+    "                <p style='margin: 0; font-size: 14px; color: #475569; line-height: 1.5;'>\n",
+    "                    This App was created by <strong>Felipe Benavides</strong> from the SDS Lab at<br>\n",
+    "                    <strong>Northeastern University</strong> and the <strong>Gulf of Maine Research Institute</strong><br>\n",
+    "                    📧 <a href=\"mailto:pipeben@gmail.com\" style=\"color: #0ea5e9; text-decoration: none; font-weight: 500;\">pipeben@gmail.com</a>\n",
     "                </p>\n",
     "            </div>\n",
     "            \"\"\"\n",
@@ -1160,7 +1175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1174,7 +1189,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e1527cd8b2914866a62b0e42fb8a3e59",
+       "model_id": "0488d7f8d2c8495ebee554a33a639699",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1190,11 +1205,8 @@
     "# ===============================================\n",
     "# 🚀 LAUNCH THE APP\n",
     "# ===============================================\n",
-    "\n",
     "app = AlphaEarthApp(PROJECT_ID)\n",
-    "app.display_app()\n",
-    "\n",
-    "    "
+    "app.display_app()    "
    ]
   }
  ],
