--- a/alpha_earth_app.ipynb
+++ b/alpha_earth_app.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
@@ -300,8 +300,7 @@
     "    \"\"\"\n",
     ")\n",
     "\n",
-    "        # Attribution box\n",
-    "        # Attribution box\n",
+    "\n",
     "        # Attribution box\n",
     "        self.attribution_box = widgets.HTML(\n",
     "            value=\"\"\"\n",
@@ -324,6 +323,17 @@
     "                    <strong>Northeastern University</strong> and the <strong>Gulf of Maine Research Institute</strong><br>\n",
     "                    📧 <a href=\"mailto:pipeben@gmail.com\" style=\"color: #0ea5e9; text-decoration: none; font-weight: 500;\">pipeben@gmail.com</a>\n",
     "                </p>\n",
+    "                \n",
+    "                <div style='border-top: 1px solid #cbd5e1; margin: 15px 0 5px 0; padding-top: 15px;'>\n",
+    "                    <p style='margin: 0 0 8px 0; font-size: 13px; font-weight: bold; color: #374151;'>\n",
+    "                        📚 How to Cite This App:\n",
+    "                    </p>\n",
+    "                    <p style='margin: 0; font-size: 12px; color: #64748b; line-height: 1.4; font-style: italic;'>\n",
+    "                        Benavides, F. (2025). AlphaEarth Foundation Model for Land Cover Classification App. \n",
+    "                        SDS Lab, Northeastern University and Gulf of Maine Research Institute. \n",
+    "                        <em>Zenodo</em>. <a href=\"https://doi.org/10.5281/zenodo.16911104\" target=\"_blank\" style=\"color: #2563eb; text-decoration: none;\">https://doi.org/10.5281/zenodo.16911104</a>\n",
+    "                    </p>\n",
+    "                </div>\n",
     "            </div>\n",
     "            \"\"\"\n",
     "        )\n",
@@ -1175,7 +1185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1189,7 +1199,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0488d7f8d2c8495ebee554a33a639699",
+       "model_id": "e3fbea96c9834bfaba3a44e4a6e2bfa0",
        "version_major": 2,
        "version_minor": 0
       },
