--- a/alpha_earth_app.ipynb
+++ b/alpha_earth_app.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "metadata": {
     "tags": []
    },
@@ -360,6 +360,7 @@
     "            basemap=basemaps.Esri.WorldImagery,\n",
     "            center=[41.8, -72.6],  # Default center\n",
     "            zoom=7,\n",
+    "            scroll_wheel_zoom=True,\n",
     "            layout=widgets.Layout(height='350px', width='100%')\n",
     "        )\n",
     "\n",
@@ -1040,27 +1041,42 @@
     "                    \n",
     "                    try:\n",
     "                        download_links_html = \"<div style='background: #f0f9ff; padding: 15px; border-radius: 8px; margin: 10px 0;'>\"\n",
-    "                        download_links_html += \"<h4 style='color: #1e40af; margin: 0 0 10px 0; text-align: center;'>📥 Click links below to download:</h4>\"\n",
+    "                        download_links_html += \"\"\"\n",
+    "                        <h4 style='color: #1e40af; margin: 0 0 10px 0; text-align: center;'>📥 Download Instructions:</h4>\n",
+    "                        <div style='background: #fff3cd; padding: 10px; border-radius: 6px; margin-bottom: 10px; font-size: 13px; color: #92400e;'>\n",
+    "                            <strong>⚠️ Important:</strong> Earth Engine gives complicated filenames. When downloading:<br>\n",
+    "                            1️⃣ <strong>Right-click</strong> the link → <strong>\"Save As\"</strong><br>\n",
+    "                            2️⃣ <strong>Copy the suggested name</strong> below and paste it as the filename. It represents embedding's ID and lat-lon coordinates of the ROI\n",
+    "                        </div>\n",
+    "                        \"\"\"\n",
     "                        \n",
     "                        # Generate download links for each of the top 3 embeddings\n",
     "                        for i, layer in enumerate(embedding_layers):\n",
     "                            print(f\"📥 Generating download link for {layer['name']} (Rank {layer['rank']})...\")\n",
+    "                            \n",
+    "                            # Create clean coordinate-based filename\n",
+    "                            clean_filename = f\"{layer['name']}_{bbox[0]:.2f}_{bbox[2]:.2f}_{bbox[1]:.2f}_{bbox[3]:.2f}.tif\"\n",
     "                            \n",
     "                            # Get download URL from Earth Engine\n",
     "                            download_url = layer['image'].getDownloadURL({\n",
     "                                'scale': self.scale_m.value,\n",
     "                                'crs': 'EPSG:4326',\n",
     "                                'region': region,\n",
-    "                                'format': 'GEO_TIFF',\n",
-    "                                'name': f\"embedding_{layer['name']}_{self.class_a.value}vs{self.class_b.value}\"\n",
+    "                                'format': 'GEO_TIFF'\n",
     "                            })\n",
     "                            \n",
-    "                            # Add to download links HTML\n",
+    "                            # Add to download links HTML with clear filename instructions\n",
     "                            download_links_html += f\"\"\"\n",
-    "                            <div style='margin: 8px 0; padding: 10px; background: white; border-radius: 6px; border-left: 3px solid #3b82f6;'>\n",
+    "                            <div style='margin: 8px 0; padding: 12px; background: white; border-radius: 6px; border-left: 3px solid #3b82f6;'>\n",
     "                                <strong>🏆 {layer['name']}</strong> ({layer['importance']:.1f}% importance)<br>\n",
+    "                                \n",
+    "                                <div style='background: #f1f5f9; padding: 8px; border-radius: 4px; margin: 6px 0; border: 1px dashed #94a3b8;'>\n",
+    "                                    <strong style='color: #1e40af;'>📝 Use this filename:</strong><br>\n",
+    "                                    <code style='background: #e2e8f0; padding: 2px 6px; border-radius: 3px; font-family: monospace; color: #1e293b; font-weight: bold;'>{clean_filename}</code>\n",
+    "                                </div>\n",
+    "                                \n",
     "                                <a href=\"{download_url}\" target=\"_blank\" style='color: #2563eb; text-decoration: none; font-weight: 500;'>\n",
-    "                                    📁 Download embedding_{layer['name']}_{self.class_a.value}vs{self.class_b.value}.tif\n",
+    "                                    📁 Click → Save As → Use filename above\n",
     "                                </a>\n",
     "                            </div>\n",
     "                            \"\"\"\n",
@@ -1069,7 +1085,7 @@
     "                        \n",
     "                        download_status.value = \"\"\"\n",
     "                        <div style='background: #dcfce7; padding: 10px; border-radius: 8px; margin: 10px 0; text-align: center;'>\n",
-    "                            <strong>✅ Download links ready!</strong> Click the links below to save files to your computer.\n",
+    "                            <strong>✅ Download links ready!</strong> Follow the instructions to save with clean filenames.\n",
     "                        </div>\n",
     "                        \"\"\" + download_links_html\n",
     "                        \n",
@@ -1185,7 +1201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1199,7 +1215,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e3fbea96c9834bfaba3a44e4a6e2bfa0",
+       "model_id": "d037bf40e2424556a9fde40bf4948099",
        "version_major": 2,
        "version_minor": 0
       },
