--- a/alpha_earth_app.ipynb
+++ b/alpha_earth_app.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 41,
    "metadata": {
     "tags": []
    },
@@ -1044,9 +1044,8 @@
     "                        download_links_html += \"\"\"\n",
     "                        <h4 style='color: #1e40af; margin: 0 0 10px 0; text-align: center;'>📥 Download Instructions:</h4>\n",
     "                        <div style='background: #fff3cd; padding: 10px; border-radius: 6px; margin-bottom: 10px; font-size: 13px; color: #92400e;'>\n",
-    "                            <strong>⚠️ Important:</strong> Earth Engine gives complicated filenames. When downloading:<br>\n",
-    "                            1️⃣ <strong>Right-click</strong> the link → <strong>\"Save As\"</strong><br>\n",
-    "                            2️⃣ <strong>Copy the suggested name</strong> below and paste it as the filename. It represents embedding's ID and lat-lon coordinates of the ROI\n",
+    "                            <strong>⚠️ Important:</strong> Earth Engine gives complicated filenames. When downloading:<br>                            \n",
+    "                            ✅ <strong>Copy the suggested name</strong> below and paste it as the filename. It represents embedding's ID and lat-lon coordinates of your ROI\n",
     "                        </div>\n",
     "                        \"\"\"\n",
     "                        \n",
@@ -1071,7 +1070,7 @@
     "                                <strong>🏆 {layer['name']}</strong> ({layer['importance']:.1f}% importance)<br>\n",
     "                                \n",
     "                                <div style='background: #f1f5f9; padding: 8px; border-radius: 4px; margin: 6px 0; border: 1px dashed #94a3b8;'>\n",
-    "                                    <strong style='color: #1e40af;'>📝 Use this filename:</strong><br>\n",
+    "                                    <strong style='color: #1e40af;'>📝 Suggested filename:</strong><br>\n",
     "                                    <code style='background: #e2e8f0; padding: 2px 6px; border-radius: 3px; font-family: monospace; color: #1e293b; font-weight: bold;'>{clean_filename}</code>\n",
     "                                </div>\n",
     "                                \n",
@@ -1201,7 +1200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 43,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1215,7 +1214,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d037bf40e2424556a9fde40bf4948099",
+       "model_id": "8f398859960c4ee6adaf424b497f029d",
        "version_major": 2,
        "version_minor": 0
       },
