--- a/alpha_earth_app.ipynb
+++ b/alpha_earth_app.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 80,
    "metadata": {
     "tags": []
    },
@@ -301,16 +301,25 @@
     "        now = datetime.now()\n",
     "        formatted_timestamp = f\"{now.year} {now.month:02d} {now.day:02d} {now.hour:02d}\"\n",
     "        \n",
+    "        # Calculate ROI area\n",
+    "        bbox = self.selected_bbox\n",
+    "        width = abs(bbox[2] - bbox[0])  # max_lon - min_lon\n",
+    "        height = abs(bbox[3] - bbox[1])  # max_lat - min_lat\n",
+    "        area = width * height\n",
+    "        \n",
     "        # Prepare row data for Google Sheets\n",
     "        row_data = [\n",
     "            formatted_timestamp,\n",
     "            now.isoformat(),\n",
-    "            self.selected_bbox[0],  # min_lon\n",
-    "            self.selected_bbox[1],  # min_lat\n",
-    "            self.selected_bbox[2],  # max_lon\n",
-    "            self.selected_bbox[3],  # max_lat\n",
+    "            bbox[0],  # min_lon\n",
+    "            bbox[1],  # min_lat\n",
+    "            bbox[2],  # max_lon\n",
+    "            bbox[3],  # max_lat\n",
     "            results_data['center_lat'],\n",
     "            results_data['center_lon'],\n",
+    "            width,  # roi_width_degrees\n",
+    "            height,  # roi_height_degrees\n",
+    "            area,  # roi_area_square_degrees\n",
     "            self.class_a.value,\n",
     "            self.ESA_CLASSES[self.class_a.value],\n",
     "            self.class_b.value,\n",
@@ -348,7 +357,8 @@
     "                # Fallback: print data for manual collection\n",
     "                print(\"Google Sheets not configured - interaction data:\")\n",
     "                print(f\"Timestamp: {formatted_timestamp}\")\n",
-    "                print(f\"ROI: {self.selected_bbox}\")\n",
+    "                print(f\"ROI: {bbox}\")\n",
+    "                print(f\"ROI Area: {area:.4f} square degrees\")\n",
     "                print(f\"Classes: {self.class_a.value} vs {self.class_b.value}\")\n",
     "                print(f\"Algorithm: {self.algorithm.value}\")\n",
     "                print(f\"Accuracy: {results_data['accuracy']:.3f}\")\n",
@@ -362,10 +372,11 @@
     "            try:\n",
     "                existing_data = sheet.get_all_values()\n",
     "                if len(existing_data) == 0:\n",
-    "                    # Create header row\n",
+    "                    # Create header row with area included\n",
     "                    headers = [\n",
     "                        'timestamp', 'timestamp_iso', 'min_lon', 'min_lat', 'max_lon', 'max_lat',\n",
-    "                        'center_lat', 'center_lon', 'class_a', 'class_a_name', 'class_b', 'class_b_name',\n",
+    "                        'center_lat', 'center_lon', 'roi_width_degrees', 'roi_height_degrees', 'roi_area_square_degrees',\n",
+    "                        'class_a', 'class_a_name', 'class_b', 'class_b_name',\n",
     "                        'algorithm', 'test_size_percent', 'samples_per_class', 'scale_meters', 'seed',\n",
     "                        'accuracy', 'roc_auc', 'precision_class_a', 'recall_class_a', 'f1_class_a',\n",
     "                        'precision_class_b', 'recall_class_b', 'f1_class_b', 'n_train', 'n_test',\n",
@@ -386,11 +397,17 @@
     "            \n",
     "            print(f\"Interaction #{interaction_number} logged to Google Sheets\")\n",
     "            print(f\"Timestamp: {formatted_timestamp}\")\n",
+    "            print(f\"ROI Area: {area:.4f} square degrees\")\n",
     "            print(f\"View data: {GOOGLE_SHEET_URL}\")\n",
     "            \n",
     "        except Exception as e:\n",
     "            print(f\"Failed to log to Google Sheets: {str(e)}\")\n",
     "            print(\"Data logging disabled for this session\")\n",
+    "            \n",
+    "            \n",
+    "            \n",
+    "            \n",
+    "            \n",
     "\n",
     "    def create_widgets(self):\n",
     "        \"\"\"Create all UI widgets with interactive map for region selection\"\"\"\n",
@@ -449,12 +466,22 @@
     "            in geospatial science.\n",
     "        </p>\n",
     "        \n",
+    "        <p style='margin: 0 0 15px 0; font-size: 16px; line-height: 1.6; color: #1e293b;'>\n",
+    "            <strong style='color: #7c2d12;'>Research Data Collection:</strong> Each time you run a classification, \n",
+    "            your interaction data (region coordinates, class selections, algorithm parameters, and model performance, etc) \n",
+    "            will be automatically stored for research purposes. The main objective is to identify whether robust \n",
+    "            relationships exist between pairwise land cover classifications and specific embedding patterns at a \n",
+    "            global scale, enabling us to understand which subset of embeddings capture specific ecological or \n",
+    "            geographical features.\n",
+    "        </p>\n",
+    "        \n",
     "        <p style='margin: 0 0 15px 0; font-size: 16px; line-height: 1.6; color: #1e293b;'>                    \n",
     "            To run this app with all features (not just demo), you need to first create a free Google Earth Engine account at \n",
     "            <a href=\"https://signup.earthengine.google.com\" target=\"_blank\" style=\"color: #2563eb; text-decoration: underline; font-weight: 500;\">signup.earthengine.google.com</a>. After that, you must create and register a Google Cloud Project under the non-commercial \n",
     "            option, which automatically enables the Earth Engine API. Once your account and project are set up, the app can connect \n",
     "            securely to Earth Engine, moving beyond demo mode and giving you full access to datasets and geospatial analysis tools.                    \n",
     "        </p>\n",
+    "        \n",
     "        \n",
     "        <div style='background: #e0f2fe; padding: 15px; border-radius: 8px; border-left: 4px solid #0288d1;'>\n",
     "            <h4 style='margin: 0 0 10px 0; font-size: 16px; font-weight: bold; color: #01579b;'>\n",
@@ -1309,7 +1336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 82,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1323,7 +1350,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fa499c481ade4e67ac176dec1a8e6b71",
+       "model_id": "c378d2367e0b4d2eb49ece30e7425535",
        "version_major": 2,
        "version_minor": 0
       },
