--- a/alpha_earth_app.ipynb
+++ b/alpha_earth_app.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {
     "tags": []
    },
@@ -205,6 +205,33 @@
     "    order = np.argsort(vals)[::-1][:k]\n",
     "    return [(display[i], float(vals[i]), bands[i]) for i in order]\n",
     "\n",
+    "def all_embedding_importance(importances, bands, as_percent=True):\n",
+    "    \"\"\"Get importance for all 64 embeddings in A01-A64 order\"\"\"\n",
+    "    vals = np.asarray(importances, dtype=float).ravel()\n",
+    "    bands = list(bands)\n",
+    "    L = min(vals.size, len(bands))\n",
+    "    vals, bands = vals[:L], bands[:L]\n",
+    "    \n",
+    "    # Create mapping from band to importance\n",
+    "    band_to_importance = {}\n",
+    "    for i, band in enumerate(bands):\n",
+    "        display_name = f\"A{int(band[1:]) + 1:02d}\"\n",
+    "        band_to_importance[display_name] = vals[i]\n",
+    "    \n",
+    "    if as_percent:\n",
+    "        total = vals.sum() or 1.0\n",
+    "        for key in band_to_importance:\n",
+    "            band_to_importance[key] = 100.0 * band_to_importance[key] / total\n",
+    "    \n",
+    "    # Return all 64 in order A01-A64\n",
+    "    result = []\n",
+    "    for i in range(1, 65):\n",
+    "        embedding_name = f\"A{i:02d}\"\n",
+    "        importance = band_to_importance.get(embedding_name, 0.0)\n",
+    "        result.append((embedding_name, float(importance)))\n",
+    "    \n",
+    "    return result\n",
+    "\n",
     "# ===============================================\n",
     "# GOOGLE SHEETS DATA LOGGING\n",
     "# ===============================================\n",
@@ -294,7 +321,7 @@
     "        }\n",
     "\n",
     "    def log_interaction_to_sheets(self, results_data):\n",
-    "        \"\"\"Log user interaction data to Google Sheets\"\"\"\n",
+    "        \"\"\"Log user interaction data to Google Sheets with all 64 embeddings\"\"\"\n",
     "        from datetime import datetime\n",
     "        \n",
     "        # Create timestamp in format: YYYY MM DD HH\n",
@@ -307,8 +334,8 @@
     "        height = abs(bbox[3] - bbox[1])  # max_lat - min_lat\n",
     "        area = width * height\n",
     "        \n",
-    "        # Prepare row data for Google Sheets\n",
-    "        row_data = [\n",
+    "        # Prepare base row data\n",
+    "        base_row_data = [\n",
     "            formatted_timestamp,\n",
     "            now.isoformat(),\n",
     "            bbox[0],  # min_lon\n",
@@ -339,7 +366,7 @@
     "            results_data['f1_b'],\n",
     "            results_data['n_train'],\n",
     "            results_data['n_test'],\n",
-    "            # Top 5 embeddings as separate columns\n",
+    "            # Top 5 embeddings as separate columns (keep for compatibility)\n",
     "            results_data['top_embeddings'][0][0] if len(results_data['top_embeddings']) > 0 else '',\n",
     "            results_data['top_embeddings'][0][1] if len(results_data['top_embeddings']) > 0 else 0,\n",
     "            results_data['top_embeddings'][1][0] if len(results_data['top_embeddings']) > 1 else '',\n",
@@ -351,6 +378,18 @@
     "            results_data['top_embeddings'][4][0] if len(results_data['top_embeddings']) > 4 else '',\n",
     "            results_data['top_embeddings'][4][1] if len(results_data['top_embeddings']) > 4 else 0,\n",
     "        ]\n",
+    "        \n",
+    "        # Add all 64 embedding importances\n",
+    "        all_embedding_importances = []\n",
+    "        if 'all_embeddings' in results_data:\n",
+    "            for embedding_name, importance in results_data['all_embeddings']:\n",
+    "                all_embedding_importances.append(importance)\n",
+    "        else:\n",
+    "            # Fallback: fill with zeros if all_embeddings not available\n",
+    "            all_embedding_importances = [0.0] * 64\n",
+    "        \n",
+    "        # Combine base data with all embedding importances\n",
+    "        row_data = base_row_data + all_embedding_importances\n",
     "        \n",
     "        try:\n",
     "            if self.sheets_client is None:\n",
@@ -372,8 +411,8 @@
     "            try:\n",
     "                existing_data = sheet.get_all_values()\n",
     "                if len(existing_data) == 0:\n",
-    "                    # Create header row with area included\n",
-    "                    headers = [\n",
+    "                    # Create header row with all 64 embeddings\n",
+    "                    base_headers = [\n",
     "                        'timestamp', 'timestamp_iso', 'min_lon', 'min_lat', 'max_lon', 'max_lat',\n",
     "                        'center_lat', 'center_lon', 'roi_width_degrees', 'roi_height_degrees', 'roi_area_square_degrees',\n",
     "                        'class_a', 'class_a_name', 'class_b', 'class_b_name',\n",
@@ -384,6 +423,11 @@
     "                        'top_embedding_3', 'top_embedding_3_pct', 'top_embedding_4', 'top_embedding_4_pct',\n",
     "                        'top_embedding_5', 'top_embedding_5_pct'\n",
     "                    ]\n",
+    "                    \n",
+    "                    # Add all 64 embedding importance columns\n",
+    "                    embedding_headers = [f'A{i:02d}_importance' for i in range(1, 65)]\n",
+    "                    headers = base_headers + embedding_headers\n",
+    "                    \n",
     "                    sheet.append_row(headers)\n",
     "            except:\n",
     "                pass\n",
@@ -395,19 +439,11 @@
     "            current_rows = len(sheet.get_all_values())\n",
     "            interaction_number = current_rows - 1  # Subtract header row\n",
     "            \n",
-    "            print(f\"Interaction #{interaction_number} logged to Google Sheets\")\n",
-    "            print(f\"Timestamp: {formatted_timestamp}\")\n",
-    "            print(f\"ROI Area: {area:.4f} square degrees\")\n",
-    "            print(f\"View data: {GOOGLE_SHEET_URL}\")\n",
+    "\n",
     "            \n",
     "        except Exception as e:\n",
     "            print(f\"Failed to log to Google Sheets: {str(e)}\")\n",
     "            print(\"Data logging disabled for this session\")\n",
-    "            \n",
-    "            \n",
-    "            \n",
-    "            \n",
-    "            \n",
     "\n",
     "    def create_widgets(self):\n",
     "        \"\"\"Create all UI widgets with interactive map for region selection\"\"\"\n",
@@ -1022,6 +1058,9 @@
     "                importances = clf.feature_importances_\n",
     "                top5 = top_k_importance(importances, EMBED_BANDS, k=5, as_percent=True)\n",
     "                top3 = top_k_importance(importances, EMBED_BANDS, k=3, as_percent=True)\n",
+    "                \n",
+    "                # Calculate all embedding importances\n",
+    "                all_importances = all_embedding_importance(importances, EMBED_BANDS, as_percent=True)\n",
     "\n",
     "                self.progress.value = 90\n",
     "                self.progress.description = 'Creating map...'\n",
@@ -1144,7 +1183,7 @@
     "\n",
     "                folium.LayerControl().add_to(m)\n",
     "\n",
-    "                # LOG INTERACTION DATA TO GOOGLE SHEETS\n",
+    "                # UPDATE RESULTS DATA TO INCLUDE ALL EMBEDDINGS\n",
     "                results_data = {\n",
     "                    'center_lat': center_lat,\n",
     "                    'center_lon': center_lon,\n",
@@ -1159,7 +1198,8 @@
     "                    'confusion_matrix': cm_matrix,\n",
     "                    'n_train': len(y_train),\n",
     "                    'n_test': len(y_test),\n",
-    "                    'top_embeddings': [(name, float(pct)) for name, pct, _ in top5]\n",
+    "                    'top_embeddings': [(name, float(pct)) for name, pct, _ in top5],\n",
+    "                    'all_embeddings': all_importances  # Add all 64 embeddings\n",
     "                }\n",
     "\n",
     "                # Log to Google Sheets\n",
@@ -1336,7 +1376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1350,7 +1390,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1a25067fe1f340b29f1d11abacb34817",
+       "model_id": "4d2c6ce5dfe842b1b59145228d0e3329",
        "version_major": 2,
        "version_minor": 0
       },
