--- a/alpha_earth_app.ipynb
+++ b/alpha_earth_app.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 65,
    "metadata": {
     "tags": []
    },
@@ -320,6 +320,9 @@
     "            90: '#0096a0', 95: '#00cf75', 100: '#fae6a0'\n",
     "        }\n",
     "\n",
+    "    \n",
+    "\n",
+    "    \n",
     "    def log_interaction_to_sheets(self, results_data):\n",
     "        \"\"\"Log user interaction data to Google Sheets with all 64 embeddings\"\"\"\n",
     "        from datetime import datetime\n",
@@ -379,17 +382,20 @@
     "            results_data['top_embeddings'][4][1] if len(results_data['top_embeddings']) > 4 else 0,\n",
     "        ]\n",
     "        \n",
-    "        # Add all 64 embedding importances\n",
-    "        all_embedding_importances = []\n",
+    "        # Add all 64 embedding names and importances (interleaved)\n",
+    "        all_embedding_data = []\n",
     "        if 'all_embeddings' in results_data:\n",
     "            for embedding_name, importance in results_data['all_embeddings']:\n",
-    "                all_embedding_importances.append(importance)\n",
+    "                all_embedding_data.append(embedding_name)  # Add name\n",
+    "                all_embedding_data.append(importance)      # Add importance\n",
     "        else:\n",
-    "            # Fallback: fill with zeros if all_embeddings not available\n",
-    "            all_embedding_importances = [0.0] * 64\n",
+    "            # Fallback: fill with empty names and zero importances\n",
+    "            for i in range(1, 65):\n",
+    "                all_embedding_data.append(f'A{i:02d}')  # Add name\n",
+    "                all_embedding_data.append(0.0)          # Add importance\n",
     "        \n",
-    "        # Combine base data with all embedding importances\n",
-    "        row_data = base_row_data + all_embedding_importances\n",
+    "        # Combine base data with all embedding data\n",
+    "        row_data = base_row_data + all_embedding_data\n",
     "        \n",
     "        try:\n",
     "            if self.sheets_client is None:\n",
@@ -411,7 +417,7 @@
     "            try:\n",
     "                existing_data = sheet.get_all_values()\n",
     "                if len(existing_data) == 0:\n",
-    "                    # Create header row with all 64 embeddings\n",
+    "                    # Create header row with all 64 embeddings (names and importances)\n",
     "                    base_headers = [\n",
     "                        'timestamp', 'timestamp_iso', 'min_lon', 'min_lat', 'max_lon', 'max_lat',\n",
     "                        'center_lat', 'center_lon', 'roi_width_degrees', 'roi_height_degrees', 'roi_area_square_degrees',\n",
@@ -424,10 +430,13 @@
     "                        'top_embedding_5', 'top_embedding_5_pct'\n",
     "                    ]\n",
     "                    \n",
-    "                    # Add all 64 embedding importance columns\n",
-    "                    embedding_headers = [f'A{i:02d}_importance' for i in range(1, 65)]\n",
-    "                    headers = base_headers + embedding_headers\n",
+    "                    # Add all 64 embedding name and importance columns (interleaved)\n",
+    "                    embedding_headers = []\n",
+    "                    for i in range(1, 65):\n",
+    "                        embedding_headers.append(f'A{i:02d}_name')\n",
+    "                        embedding_headers.append(f'A{i:02d}_importance')\n",
     "                    \n",
+    "                    headers = base_headers + embedding_headers\n",
     "                    sheet.append_row(headers)\n",
     "            except:\n",
     "                pass\n",
@@ -439,12 +448,23 @@
     "            current_rows = len(sheet.get_all_values())\n",
     "            interaction_number = current_rows - 1  # Subtract header row\n",
     "            \n",
-    "\n",
+    "            print(f\"Interaction #{interaction_number} logged to Google Sheets\")\n",
+    "            print(f\"Timestamp: {formatted_timestamp}\")\n",
+    "            print(f\"ROI Area: {area:.4f} square degrees\")\n",
+    "            print(f\"All 64 embedding names and importances logged\")\n",
+    "            print(f\"View data: {GOOGLE_SHEET_URL}\")\n",
     "            \n",
     "        except Exception as e:\n",
     "            print(f\"Failed to log to Google Sheets: {str(e)}\")\n",
     "            print(\"Data logging disabled for this session\")\n",
-    "\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
     "    def create_widgets(self):\n",
     "        \"\"\"Create all UI widgets with interactive map for region selection\"\"\"\n",
     "        # App title\n",
@@ -1376,7 +1396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 67,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1390,7 +1410,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4d2c6ce5dfe842b1b59145228d0e3329",
+       "model_id": "5815130a2b284db3aeacfa312d542bb3",
        "version_major": 2,
        "version_minor": 0
       },
