--- a/alpha_earth_app.ipynb
+++ b/alpha_earth_app.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 73,
    "metadata": {
     "tags": []
    },
@@ -400,14 +400,7 @@
     "        try:\n",
     "            if self.sheets_client is None:\n",
     "                # Fallback: print data for manual collection\n",
-    "                print(\"Google Sheets not configured - interaction data:\")\n",
-    "                print(f\"Timestamp: {formatted_timestamp}\")\n",
-    "                print(f\"ROI: {bbox}\")\n",
-    "                print(f\"ROI Area: {area:.4f} square degrees\")\n",
-    "                print(f\"Classes: {self.class_a.value} vs {self.class_b.value}\")\n",
-    "                print(f\"Algorithm: {self.algorithm.value}\")\n",
-    "                print(f\"Accuracy: {results_data['accuracy']:.3f}\")\n",
-    "                print(f\"Top embedding: {results_data['top_embeddings'][0][0]}\")\n",
+    "                print(\"\")\n",
     "                return\n",
     "            \n",
     "            # Open the Google Sheet\n",
@@ -448,11 +441,6 @@
     "            current_rows = len(sheet.get_all_values())\n",
     "            interaction_number = current_rows - 1  # Subtract header row\n",
     "            \n",
-    "            print(f\"Interaction #{interaction_number} logged to Google Sheets\")\n",
-    "            print(f\"Timestamp: {formatted_timestamp}\")\n",
-    "            print(f\"ROI Area: {area:.4f} square degrees\")\n",
-    "            print(f\"All 64 embedding names and importances logged\")\n",
-    "            print(f\"View data: {GOOGLE_SHEET_URL}\")\n",
     "            \n",
     "        except Exception as e:\n",
     "            print(f\"Failed to log to Google Sheets: {str(e)}\")\n",
@@ -1396,7 +1384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 75,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1410,7 +1398,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5815130a2b284db3aeacfa312d542bb3",
+       "model_id": "24894016c0084d948f6fb6af8e041afa",
        "version_major": 2,
        "version_minor": 0
       },
